# methodfinder

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.githooks/: pre-commit
src/methodfinder/: __init__.py  methodfinder-test.py  methodfinder.py
